--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,22 @@
 fixtures:
   symlinks:
     sssd: "#{source_dir}"
+  forge_modules:
+    augeasproviders_core:
+      repo: "herculesteam/augeasproviders_core"
+      ref: "2.6.0"
+    bodgitlib:
+      repo: "bodgit/bodgitlib"
+      ref: "2.0.1"
+    datacat:
+      repo: "richardc/datacat"
+      ref: "0.6.2"
+    dbus:
+      repo: "bodgit/dbus"
+      ref: "2.0.1"
+    ip:
+      repo: "thrnio/ip"
+      ref: "1.0.1"
+    stdlib:
+      repo: "puppetlabs/stdlib"
+      ref: "4.25.1"
